add fixes to programming assignment 2

--- a/Module_2/module-2-programming-project.html
+++ b/Module_2/module-2-programming-project.html
@@ -32,8 +32,10 @@ console.log(name);
 
 if(name == "")
 {
-  alert("Please type a name."
+  prompt("Please type a name."
   )
+} else{
+  alert("Thank you!")
 }
 
 //--------//
@@ -102,8 +104,10 @@ alert("You win!")
   console.log(places);
   //3. Use the pop function on the array and output the array list
   places.pop();
+  console.log(places);
   //4. Use the shift function on the array and output the array list
-  fruits.shift();
+  places.shift();
+console.log(places);
 </script>
 </head>
 <body>
