finish log in page

--- a/Module_9/Survey/index.html
+++ b/Module_9/Survey/index.html
@@ -42,7 +42,7 @@
             What is your favorite city to visit outside of Pittsburgh?
             <input class="text" type="text" id="vacationName" name="vacationName" style="width: 300px">
             <br>
-            <button class="text" type="submit" onClick="checkForm()"> Submit!</button>
+            <button class="text" type="submit"> Submit!</button>
 
         </Form>
         </div>
