--- a/Module_9/Survey/index.html
+++ b/Module_9/Survey/index.html
@@ -17,30 +17,30 @@
     <body>
         <div class="main">
         <h1 class="text">Enter your info!</h1>
-        <form name="myForm" class="myForm" onSubmit="return checkForm()" method="post"> 
+        <form name="myForm" class="myForm" onSubmit="return checkForm()" method="post" action="https://eelslap.com/"> 
             First Name: <input class="text" type="text" id="fName" name="fname">
             Last Name: <input class="text" type="text" id="lName" name="lname">
            
             <h2 class="text">Address</h2>
-            Address Line 1: <input class="text" type="text" id="addressInput" name="addy1" onClick="checkField()" onInput="checkField()">
+            Address Line 1: <input class="text" type="text" id="addressInput" name="addy1" onInput="checkFieldColor('addressInput');">
             <br>
-            Address Line 2: <input class="text" type="text" name="addy2" onClick="checkField()">
+            Address Line 2: <input class="text" type="text" id="addressInput2" name="addy2" onInput="checkFieldColor('addressInput2')">
             <br>
             City: <input class="text" type="text" id="cityName" name="city">
             <br>
-            State: <input class="text" type="text" id="stateName" name="state">
+            State: <input class="text" type="text" id="stateName" name="state" maxlength="2">
             <br>
-            Zip Code: <input class="text" type="number" id="zip" name="zip">
+            Zip Code: <input class="text" type="number" id="zip" name="zip" maxlength="5">
             
             <h2 class="text">Personal Info</h2>
             What is your favorite coffee place in Pittsburgh?
-            <input class="text" type="text" id="coffeePlace" name="coffeePlace" style="width: 300px;">
+            <input class="text" type="text" id="coffeePlace" name="coffeePlace" style="width: 300px;" onInput="checkFieldColor('coffeePlace');">
             <br>
             What is your favorite lunch spot in Pittsburgh?
-            <input class="text" type="text" id="lunchSpot" name="lunchSpot" style="width: 300px;">
+            <input class="text" type="text" id="lunchSpot" name="lunchSpot" style="width: 300px;" onInput="checkFieldColor('lunchSpot');">
             <br>
             What is your favorite city to visit outside of Pittsburgh?
-            <input class="text" type="text" id="vacationName" name="vacationName" style="width: 300px">
+            <input class="text" type="text" id="vacationName" name="vacationName" style="width: 300px" onInput="checkFieldColor('vacationName');">
             <br>
             <button class="text" type="submit"> Submit!</button>
 
