--- a/Module_10/logIn.html
+++ b/Module_10/logIn.html
@@ -1,25 +1,13 @@
 <html>
+    <title>Log In</title>
     <head>
         <script src="grocery.js" ></script>
-        <style>
-            .fullScreen {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-            .myForm {
-                display: flex;
-                flex-direction: column;
-                width: 25%;
-                font-family: "Monaco";
-            }
-        </style>
     </head>
     <body>
         <form onSubmit="logIn();">
             Username: <input type="text" id="userLogIn">
             Password: <input type="password" id="userPassIn">
-            <button type="submit" onClick="window.open('')"> Log In</button> 
+            <button type="submit"> Log In</button> 
         </form>
     </body>
 </html>
