--- a/Module_10/grocery.html
+++ b/Module_10/grocery.html
@@ -9,8 +9,8 @@
         </div>
 
         <div class="app">
+            <h1 class="items-heading"> Items</h1>
             <div class="grocery-items" id="grocery-items">
-                <h1> Items</h1>
             </div>
             <div class="cart-items">   
             </div>
