--- a/Module_10/grocery.html
+++ b/Module_10/grocery.html
@@ -4,21 +4,26 @@
         <link rel="stylesheet" type="text/css" href="orderPage.css">
     </head>
     <body>
+    <div class="fullScreen">
         <div class="banner">
             <p class="logo">Half Foods <br> Market</p>
         </div>
-
+        <button id="Delivery" class="deliver" onClick="displayLessProducts();">Delivery</button>
+        <button id="Pick Up" class="pickup" onClick="displayProducts();">Pick Up</button>
         <div class="app">
             <h1 class="items-heading"> Items</h1>
             <div class="grocery-items" id="grocery-items">
             </div>
-            <div class="cart-items">   
+
+            <h1 class="heading-cart">Cart</h1>
+            <div class="cart-element">  
             </div>
-        
-            <div class="button">
-                <button id="checkout-button" class="checkout-button" onClick="renderCartView();">Cart</button>
-            </div>
+        <button id="checkout-button" class="checkout-button" onClick="renderCartView();">Cart</button>
+        <button class="final-button" onClick="checkout();">CHECKOUT</button>
         </div>
+        <h1 class="exit-ticket">Your stuff is on the way!</h1>
+        <div class="other-exit"></div>
+    </div>
     <script src="cart.js" ></script> 
     </body>
 </html>
